--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "server": "nodemon ./src/server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ng build",
-    "heroku-postbuild": "ng build --prod"
+    "build": "ng build"
   },
   "keywords": [],
   "author": "",
