--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon ./src/server",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ng build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
